First steps towards integrating sass with flask

--- a/playlistSync/templates/base.html
+++ b/playlistSync/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - PlaylistSync</title>
-<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 <nav>
     <h1>PlaylistSync</h1>
     <ul>
